@@ -1,3 +1,10 @@
+2004-02-11  Vicki Murley  <vicki@apple.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * bindings/jni/jni_instance.cpp:
+        (JavaInstance::stringValue):
+
 === Safari-125 ===
 
 === Safari-124 ===
